# spacy-transformers

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  explosionbot.yml  issue-manager.yml  publish_pypi.yml  tests.yml
examples/: Spacy_Transformers_Demo.ipynb  init_model.py  spacy-distilbert-dep.cfg  spacy-distilbert-joint-pos-dep.cfg  spacy-distilbert-pos.cfg  test_wordpiece_alignment.py  train_from_config.py  train_ner.py  train_textcat.py
examples/configs/: joint-core-bert.cfg  ner-albert.cfg  ner-bert.cfg
examples/listen/: joint-core-bert.cfg  joint-dep-pos-bert.cfg  joint-dep-pos-distilbert.cfg
examples/own/: dep-distilbert.cfg  ner-bert.cfg  simple-ner-bert.cfg
examples/tasks/: _glue2.py  glue.conf  glue_util.py  run_glue.py
spacy_pytorch_transformers/: __init__.py  _pytt_tokenizer_subclasses.py  _tokenizers.py  _train.py  about.py  activations.py  hyper_params.py  language.py  model_registry.py  pipeline.py  reshape.py  tok2vec.py  util.py  wordpiecer.py  wrapper.py
spacy_pytorch_transformers/_extra/: glue_tasks.py  hyper_params.py  metrics.py
spacy_pytorch_transformers/pipeline/: __init__.py  textcat.py  tok2vec.py  wordpiecer.py
spacy_transformers/: __init__.py  _align.py  _align.pyx  _batch_encoding.py  _tokenizers.py  _train.py  about.py  activations.py  align.py  align.pyi  align.pyx  alignment.py  annotation_setters.py  architectures.py  data_classes.py  extension_attributes.py  extensions.py  hyper_params.py  language.py  model_registry.py  model_wrapper.py  pipeline.py  pipeline_component.py  span_getters.py  tagger.py  tok2vec.py  truncate.py  types.py  util.py  wrapper.py
spacy_transformers/layers/: __init__.py  _util.py  hf_shim.py  hf_wrapper.py  listener.py  split_trf.py  tok2vec.py  transformer.py  transformer_model.py  trfs2arrays.py  wrapper.py
spacy_transformers/pipeline/: __init__.py  ner.py  textcat.py  tok2vec.py  wordpiecer.py
spacy_transformers/tests/: test_alignment.py  test_configs.py  test_data_classes.py  test_deprecations.py  test_linear.py  test_model_sequence_classification.py  test_model_wrapper.py  test_pipeline_component.py  test_serialize.py  test_spanners.py  test_textcatcnn.py  test_tok2vectransformer.py  test_truncation.py  util.py
spacy_transformers/tests/regression/: test_space_issue6401.py  test_spacy_issue6401.py  test_spacy_issue7029.py
stubs/numpy/: __init__.pyi
stubs/pytorch_transformers/: .__init__.pyi.swp  __init__.pyi  __main__.pyi  convert_gpt2_checkpoint_to_pytorch.pyi  convert_openai_checkpoint_to_pytorch.pyi  convert_tf_checkpoint_to_pytorch.pyi  convert_xlm_checkpoint_to_pytorch.pyi  convert_xlnet_checkpoint_to_pytorch.pyi  file_utils.pyi  modeling_bert.pyi  modeling_gpt2.pyi  modeling_openai.pyi  modeling_transfo_xl.pyi  modeling_transfo_xl_utilities.pyi  modeling_utils.pyi  modeling_xlm.pyi  modeling_xlnet.pyi  optimization.pyi  tokenization_bert.pyi  tokenization_gpt2.pyi  tokenization_openai.pyi  tokenization_transfo_xl.pyi  tokenization_utils.pyi  tokenization_xlm.pyi  tokenization_xlnet.pyi
stubs/spacy/tokens/: __init__.pyi
stubs/thinc/: __init__.pyi  about.pyi  api.pyi  check.pyi  compat.pyi  describe.pyi  exceptions.pyi  i2v.pyi  loss.pyi  misc.pyi  rates.pyi  t2t.pyi  t2v.pyi  v2v.pyi
stubs/thinc/extra/: __init__.pyi  datasets.pyi  hpbff.pyi  load_nlp.pyi  visualizer.pyi  wrappers.pyi
stubs/thinc/linear/: __init__.pyi
stubs/thinc/neural/: __init__.pyi  _lsuv.pyi  mem.pyi  ops.pyi  pooling.pyi  train.pyi  util.pyi  vec2vec.pyi  vecs2vec.pyi  vecs2vecs.pyi
stubs/thinc/tests/: __init__.pyi  conftest.pyi  test_api_funcs.pyi  test_util.pyi  util.pyi
stubs/torch/: __config__.pyi  __init__.pyi  _jit_internal.pyi  _ops.pyi  _six.pyi  _storage_docs.pyi  _tensor_docs.pyi  _tensor_str.pyi  _torch_docs.pyi  _utils.pyi  _utils_internal.pyi  functional.pyi  hub.pyi  quasirandom.pyi  random.pyi  serialization.pyi  storage.pyi  tensor.pyi  version.pyi
stubs/torch/_thnn/: __init__.pyi  utils.pyi
stubs/torch/autograd/: __init__.pyi  anomaly_mode.pyi  function.pyi  grad_mode.pyi  gradcheck.pyi  profiler.pyi  variable.pyi
stubs/torch/backends/: __init__.pyi
stubs/torch/contrib/: __init__.pyi  _graph_vis.pyi
stubs/torch/cuda/: __init__.pyi  _utils.pyi  comm.pyi  error.pyi  nccl.pyi  nvtx.pyi  profiler.pyi  random.pyi  sparse.pyi  streams.pyi
stubs/torch/distributed/: __init__.pyi  distributed_c10d.pyi  launch.pyi  rendezvous.pyi
stubs/torch/distributions/: __init__.pyi  bernoulli.pyi  beta.pyi  binomial.pyi  categorical.pyi  cauchy.pyi  chi2.pyi  constraint_registry.pyi  constraints.pyi  dirichlet.pyi  distribution.pyi  exp_family.pyi  exponential.pyi  fishersnedecor.pyi  gamma.pyi  geometric.pyi  gumbel.pyi  half_cauchy.pyi  half_normal.pyi  independent.pyi  kl.pyi  laplace.pyi  log_normal.pyi  logistic_normal.pyi  lowrank_multivariate_normal.pyi  multinomial.pyi  multivariate_normal.pyi  negative_binomial.pyi  normal.pyi  one_hot_categorical.pyi  pareto.pyi  poisson.pyi  relaxed_bernoulli.pyi  relaxed_categorical.pyi  studentT.pyi  transformed_distribution.pyi  transforms.pyi  uniform.pyi  utils.pyi  weibull.pyi
stubs/torch/jit/: __init__.pyi  _logging.pyi  _pickle.pyi  annotations.pyi  frontend.pyi  quantized.pyi
stubs/torch/multiprocessing/: __init__.pyi  pool.pyi  queue.pyi  reductions.pyi  spawn.pyi
stubs/torch/nn/: __init__.pyi  _qscheme.pyi  _reduction.pyi  cpp.pyi  functional.pyi  grad.pyi  init.pyi  parameter.pyi
stubs/torch/onnx/: __init__.pyi  operators.pyi  symbolic.pyi  utils.pyi
stubs/torch/optim/: __init__.pyi  adadelta.pyi  adagrad.pyi  adam.pyi  adamax.pyi  asgd.pyi  lbfgs.pyi  lr_scheduler.pyi  optimizer.pyi  rmsprop.pyi  rprop.pyi  sgd.pyi  (+1 more)
tests/: conftest.py  test_activations.py  test_extensions.py  test_language.py  test_model_registry.py  test_ner.py  test_textcat.py  test_tok2vec.py  test_util.py  test_wordpiecer.py  test_wrapper.py  util.py
victor/: tensor.py
victor/tests/: test_tensor.py
(+141 files in other folders)
