[metadata]
version = 1.3.0
description = spaCy pipelines for pre-trained BERT and other transformers
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
install_requires =
    spacy>=3.5.0,<4.0.0
    numpy>=1.15.0; python_version < "3.9"
    numpy>=1.19.0; python_version >= "3.9"
    transformers>=3.4.0,<4.32.0
    torch>=1.8.0
    srsly>=2.4.0,<3.0.0
    dataclasses>=0.6,<1.0; python_version < "3.7"
    spacy-alignments>=0.7.2,<1.0.0

[options.extras_require]
cuda =
    cupy>=5.0.0b4
cuda80 =
    cupy-cuda80>=5.0.0b4
cuda90 =
    cupy-cuda90>=5.0.0b4
cuda91 =
    cupy-cuda91>=5.0.0b4
cuda92 =
    cupy-cuda92>=5.0.0b4
cuda100 =
    cupy-cuda100>=5.0.0b4
cuda101 =
    cupy-cuda101>=5.0.0b4
cuda102 =
    cupy-cuda102>=5.0.0b4
cuda110 =
    cupy-cuda110>=5.0.0b4
cuda111 =
    cupy-cuda111>=5.0.0b4
cuda112 =
    cupy-cuda112>=5.0.0b4

[options.entry_points]
spacy_factories =
    transformer = spacy_transformers.pipeline_component:make_transformer

spacy_architectures =
    spacy-transformers.TransformerListener.v1 = spacy_transformers:architectures.transformer_listener_tok2vec_v1
    spacy-transformers.Tok2VecTransformer.v1 = spacy_transformers:architectures.transformer_tok2vec_v1
    spacy-transformers.Tok2VecTransformer.v2 = spacy_transformers:architectures.transformer_tok2vec_v2
    spacy-transformers.Tok2VecTransformer.v3 = spacy_transformers:architectures.transformer_tok2vec_v3
    spacy-transformers.TransformerModel.v1 = spacy_transformers:architectures.create_TransformerModel_v1
    spacy-transformers.TransformerModel.v2 = spacy_transformers:architectures.create_TransformerModel_v2
    spacy-transformers.TransformerModel.v3 = spacy_transformers:architectures.create_TransformerModel_v3

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True
